<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_splash"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="70dp"
    tools:context="com.pixelstrade.audioguide.ui.activitys.SplashScreenActivity">


    <!-- image museum -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:contentDescription="@null"
        android:src="@mipmap/logo" />


    <!-- title museum -->
    <!-- first text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/international_museum_text"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        tools:targetApi="jelly_bean" />

    <!-- second text -->
    <TextView
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/croix_rouge_text"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        tools:targetApi="jelly_bean" />


    <!-- third text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/croissant_rouge_text"
        android:visibility="gone"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        tools:targetApi="jelly_bean" />


</LinearLayout>
